# sol

./: CLAUDE.md  Cargo.toml  PERFORMANCE.md  README.md  TODO.md  TODO_REFACTORING.md  cargo-sources.json  dev.xarbit.apps.Calendar.yml  i18n.toml  justfile
i18n/cs/: sol_calendar.ftl  xcalendar.ftl
i18n/da/: sol_calendar.ftl
i18n/de/: sol_calendar.ftl  xcalendar.ftl
i18n/el/: sol_calendar.ftl
i18n/en/: sol_calendar.ftl  xcalendar.ftl
i18n/es/: sol_calendar.ftl  xcalendar.ftl
i18n/fi/: sol_calendar.ftl  xcalendar.ftl
i18n/fr/: sol_calendar.ftl
i18n/it/: sol_calendar.ftl
i18n/nl/: sol_calendar.ftl  xcalendar.ftl
i18n/no/: sol_calendar.ftl  xcalendar.ftl
i18n/pl/: sol_calendar.ftl  xcalendar.ftl
i18n/pt/: sol_calendar.ftl  xcalendar.ftl
i18n/ro/: sol_calendar.ftl
i18n/sv/: sol_calendar.ftl
i18n/uk/: sol_calendar.ftl
res/: dev.xarbit.apps.Calendar.desktop  dev.xarbit.apps.Calendar.metainfo.xml  dev.xarbit.apps.Calendar.service  io.github.xarbit.SolCalendar.desktop  io.github.xarbit.SolCalendar.metainfo.xml
scripts/: build-flatpak-bundle.sh  build-flatpak.sh  test-flatpak.sh
src/: app.rs  cache.rs  caldav.rs  color_constants.rs  keyboard.rs  layout.rs  layout_constants.rs  locale.rs  localize.rs  logging.rs  main.rs  menu_action.rs  message.rs  selection.rs  settings.rs  storage.rs  styles.rs  ui_constants.rs  update.rs  url_handler.rs  validation.rs
src/calendars/: caldav_calendar.rs  calendar_source.rs  config.rs  local_calendar.rs  mod.rs
src/components/: calendar_dialog.rs  calendar_dialog_callbacks.rs  calendar_list.rs  color_picker.rs  day_cell.rs  day_header.rs  event_chip.rs  event_dialog.rs  event_dialog_callbacks.rs  header_menu.rs  mini_calendar.rs  mod.rs  spacer.rs  time_grid.rs  time_picker.rs  toolbar.rs
src/components/event_chip/: clickable.rs  timed.rs  types.rs
src/database/: schema.rs
src/dialogs/: calendar_dialog.rs  event_dialog.rs  manager.rs  mod.rs
src/models/: calendar_state.rs  day_state.rs  mod.rs  week_state.rs  year_state.rs
src/protocols/: caldav.rs  local.rs  mod.rs
src/services/: calendar_handler.rs  event_handler.rs  export_handler.rs  mod.rs  settings_handler.rs  sync_handler.rs
src/update/: calendar.rs  event.rs  mod.rs  selection.rs
src/views/: day.rs  main_view.rs  mod.rs  month.rs  sidebar.rs  week.rs  year.rs
src/views/month/: events.rs  overlay.rs
src/views/week/: events.rs  header.rs
