[package]
name = "xcalendar"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "A calendar application for the COSMIC Desktop"
repository = "https://github.com/xarbit/sol"
authors = ["xarbit"]

[dependencies]
# COSMIC framework with all recommended features
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", rev = "f2e965c76cddf3bac183e35f2c7b91874b5f2628", default-features = false, features = [
    "a11y",           # Accessibility support
    "about",          # About dialog widget
    "dbus-config",    # Config file change watching via cosmic-settings-daemon
    "multi-window",   # Multi-window support (required for single-instance)
    "tokio",          # Tokio async runtime
    "wayland",        # Wayland support
    "winit",          # Windowing system
    "wgpu",           # GPU-accelerated rendering
] }

# Async runtime
tokio = { version = "1", features = ["sync"] }
futures-util = "0.3"

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }

# Calendar formats
icalendar = "0.16"

# HTTP client for CalDAV and URL downloads
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "charset", "http2"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System directories
dirs = "5.0"

# File dialogs (with XDG portal support for Flatpak)
rfd = "0.15"

# URL parsing
url = "2.5"

# Internationalization
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = "8.8"
lazy_static = "1.5"

# Open URLs/files
open = "5.3"

# UUID generation for event IDs
uuid = { version = "1.11", features = ["v4"] }

# SQLite database with SQLCipher encryption support
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Command-line argument parsing
clap = { version = "4.5", features = ["derive"] }

# Note: cosmic-text is pinned via Cargo.lock to commit 9339446cfa9b7f0110094a97764dccc09cfa98a2
# This is a known working version. Do not update libcosmic without verifying cosmic-text compatibility.

[features]
# Single-instance support via D-Bus (disabled by default due to system compatibility issues)
# Enable with: cargo build --features single-instance
# Or disable at runtime with: COSMIC_SINGLE_INSTANCE=false sol-calendar
single-instance = ["libcosmic/single-instance"]
